# illa

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  README.md  go.mod
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yaml  ci.yml
cmd/illa/: main.go  main_test.go
docs/: Code_Contributions_Guidelines.md  README.md  Setup.md  Subcommands.md
pkg/cmd/root/: root.go
src/: lib.rs  main.rs  result.rs
src/command/: deploy.rs  doctor.rs  list.rs  mod.rs  remove.rs  restart.rs  stop.rs  update.rs  utils.rs
src/command/ui/: emoji.rs
